<resources>
    <string name="app_name">玩安卓bata</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_wechat">公众号</string>
    <string name="navigation_system">体系</string>
    <string name="navigation_navigation">导航</string>
    <string name="navigation_project">项目</string>
    <string name="article_classify">分类：</string>
    <string name="article_author">作者：</string>
    <string name="article_share_user">分享人：</string>
    <string name="article_top">置顶</string>
    <string name="article_new">新</string>
    <string name="search_input_tips">请输入搜索内容</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="hint_keyword">请输入关键词</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清除历史记录</string>
    <string name="rank">排行榜</string>
    <string name="square">广场</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_share">我的分享</string>
    <string name="question">每日一问</string>
    <string name="setting">设置</string>
    <string name="mine_about">关于我的</string>
    <string name="rank_rule">积分规则</string>
    <string name="login">登录</string>
    <string name="mine_todo">待办清单</string>
    <string name="mine_logout">退出登录</string>
    <string name="reg_txt">注册</string>
    <string name="user_name">用户名</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_again">请再次输入密码</string>
    <string name="regis_scu">注册成功</string>
    <string name="login_suc">登陆成功</string>
    <string name="two_password_not_same">两次输入的密码不一致</string>
    <string name="my_collect_titile">我的收藏</string>
    <string name="rank_integral">积分排行</string>
    <string name="integral">积分:</string>
    <string name="level">lv:</string>
    <string name="todo_title">待办清单</string>
    <string name="save">保存</string>
    <string name="todo_time">时间</string>
    <string name="todo_detail">详情</string>
    <string name="todo_content_title">标题</string>
    <string name="hint_choose">请选择</string>
    <string name="todo_edit">编辑清单</string>
    <string name="login_tip">请先登录后进入</string>
</resources>
