<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.tw.wan.data.viewmodels.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_e5e5e5"
        tools:context=".activity.RegisterActivity">

        <com.hjq.bar.TitleBar
            android:id="@+id/reg_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftIcon="@drawable/title_back"
            app:title="@string/reg_txt"
            app:titleColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reg_bar">

            <ImageView
                android:id="@+id/icon_phone"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@drawable/login_zhuce_phone"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/hint_user_name"
                android:text="@={model.userName}"
                android:textColor="@color/color_444444"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toBottomOf="@id/icon_phone"
                app:layout_constraintLeft_toRightOf="@id/icon_phone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_phone" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_e5e5e5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_phone" />

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:src="@drawable/login_lock"
                app:layout_constraintBottom_toTopOf="@id/icon_again_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={model.password}"
                android:textColor="@color/color_444444"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toBottomOf="@id/icon_password"
                app:layout_constraintLeft_toRightOf="@id/icon_password"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_password" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_e5e5e5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_password" />

            <ImageView
                android:id="@+id/icon_again_password"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:src="@drawable/login_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_password" />

            <EditText
                android:id="@+id/password_again"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@null"
                android:hint="@string/hint_password_again"
                android:inputType="textPassword"
                android:text="@={model.repassword}"
                android:textColor="@color/color_444444"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toBottomOf="@id/icon_again_password"
                app:layout_constraintLeft_toRightOf="@id/icon_again_password"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_again_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/logins_bg"
            android:onClick="@{v->model.registerUser()}"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:text="@string/reg_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <TextView
            android:id="@+id/jump_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:text="已有账号，去登录"
            android:textColor="@color/themColor"
            android:textSize="@dimen/sp_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_reg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>